cors policy bugs try 19